--- a/sonos-cdi/pom.xml
+++ b/sonos-cdi/pom.xml
@@ -112,6 +112,11 @@
 			<artifactId>lucene-highlighter</artifactId>
 			<version>${version.lucene}</version>
 		</dependency>
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>1.2</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
