--- a/sonos-cdi/pom.xml
+++ b/sonos-cdi/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>org.tensin.sonos</groupId>
 	<artifactId>sonos-cdi</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<description>SONOS</description>
 	<name>sonos-cdi</name>
@@ -22,9 +22,6 @@
 		<version.simplexml>2.7</version.simplexml>
 		<version.lucene>3.6.2</version.lucene>
 	</properties>
-
-	<build>
-	</build>
 
 	<dependencies>
 		<dependency>
@@ -248,4 +245,22 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
